fix(Cart): fix product images width to prevent content jump on image load (#146)

--- a/src/components/OverlayManager/Cart/scss/index.scss
+++ b/src/components/OverlayManager/Cart/scss/index.scss
@@ -45,8 +45,8 @@
       align-content: stretch;
 
       img {
-        max-width: 6.25rem;
         height: 6.25rem;
+        width: 6.25rem;
       }
 
       &__details {
